2023-11-11T16:21:02Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6835318289 # 948
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-11
* notice: last 14d: unq all: 2 35
* notice: prev accum: outdated-unq outdated-all / unq all: 284 602 / 300 637
* notice: next accum: outdated-unq outdated-all / unq all: 284 602 / 300 638
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-11-11]

2023-11-11T08:20:19Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6833116792 # 947
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-11
* notice: last 14d: unq all: 2 34
* notice: prev accum: outdated-unq outdated-all / unq all: 284 602 / 299 636
* notice: next accum: outdated-unq outdated-all / unq all: 284 602 / 300 637
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-10-28 2023-11-11]

2023-11-10T16:23:05Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6827247811 # 945
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-10
* notice: last 14d: unq all: 2 34
* notice: prev accum: outdated-unq outdated-all / unq all: 283 600 / 299 635
* notice: next accum: outdated-unq outdated-all / unq all: 284 602 / 299 636
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2023-10-27] / [2023-11-10]

2023-11-10T01:17:43Z: