@@ -1,24 +1,15 @@
 {
-  "timestamp" : "2023-11-11T16:21:02Z",
-  "count_outdated" : 602,
-  "uniques_outdated" : 284,
+  "timestamp" : "2023-11-12T01:22:48Z",
+  "count_outdated" : 604,
+  "uniques_outdated" : 285,
   "count" : 638,
   "uniques" : 300,
   "clones" : [
     {
-      "timestamp": "2023-10-28T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
-    {
       "timestamp": "2023-10-29T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 0, 3 ],
+      "count_decinc": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
